refac(session): simplify EndGameSagaImpl and apply Java 25 cleanup
- inline toEndReason and toReveals helpers; use triggerType.name() directly
- use _ for unused GameAlreadyOverException catch variables
- use List.of(playerIds) instead of Arrays.asList
- move findExpectedStatus above its first call site in EraSagaAdvancer